--- a/metadata.yaml
+++ b/metadata.yaml
@@ -44,6 +44,7 @@ subjects:
 - !lcsh 'Jews -- Russia -- History'
 - !lcsh 'Poland -- History'
 - !lcsh 'Jews -- Poland -- History'
+- GITenberg
 title: "History of the Jews in Russia and Poland, Volume 2 [of 3]\r\nFrom the Death\
   \ of Alexander I until the Death of Alexander III (1825-1894)"
 url: http://www.gutenberg.org/ebooks/15729
